# Sharingan-File-Monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  file_monitor.cpp
